--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.9",
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "firebase": "^9.21.0",
